--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ pipeline:
     commands:
       - gcloud source repos clone configs ../configs
       - mkdir configs
-      - cp ../configs/mirror-media/saleor-mirror/dev ./configs/config.py
+      - cp ../configs/mirror-media/saleor-mirror/dev/config.py ./configs/config.py
     when:
       event: [push]
       branch: [master, dev]
