--- a/.drone.yml
+++ b/.drone.yml
@@ -43,7 +43,7 @@ pipeline:
     tag: ${DRONE_BRANCH}_${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}_Saleor
     environment:
       - DOCKER_LAUNCH_DEBUG=true
-      - API_URI=https://saleor-dev.mirrormedia.mg/graphql/
+      - API_URI=https://saleorbackend-dev.mirrormedia.mg/graphql/
     secrets: [google_credentials]
     when:
       event: [push]
@@ -90,7 +90,7 @@ pipeline:
     template: >
       {{#success build.status}}
         *success* ${DRONE_REPO_NAME}:${DRONE_BRANCH}_${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER} was well served.
-        Check out our new <https://saleor-dashboard-dev.mirrormedia.mg/admin|Saleor Dashboard>.
+        Check out our new <https://saleordashboard-dev.mirrormedia.mg/admin|Saleor Dashboard>.
       {{else}}
         Houston, we have a problem. Build <${DRONE_BUILD_LINK}|#{{build.number}}> failed.
       {{/success}}
