--- a/.kube.yml
+++ b/.kube.yml
@@ -21,6 +21,9 @@ metadata:
   name: {{.app}}
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: {{.app}}
   template:
     metadata:
       labels:
