--- a/.drone.yml
+++ b/.drone.yml
@@ -46,7 +46,9 @@ pipeline:
     tag: ${DRONE_BRANCH}_${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}_saleor-dashboard
     environment:
       - DOCKER_LAUNCH_DEBUG=true
+      - APP_MOUNT_URI=http://35.201.139.78/dashboard/
       - API_URI=http://104.155.209.114/graphql/
+
     secrets: [google_credentials]
     when:
       event: [push]
@@ -63,7 +65,7 @@ pipeline:
         target: token
     vars:
       image: gcr.io/mirrormedia-1470651750304/${DRONE_REPO_NAME}:${DRONE_BRANCH}_${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}_saleor-dashboard
-      app: ${DRONE_REPO_NAME}-saleor-dashboard
+      app: ${DRONE_REPO_NAME}
       tier: backend
     when:
       event: [push]
