--- a/.drone.yml
+++ b/.drone.yml
@@ -48,7 +48,7 @@ pipeline:
       - DOCKER_LAUNCH_DEBUG=true
     build_args:
       - APP_MOUNT_URI=http://35.201.139.78/dashboard/
-      - API_URI=http://104.155.209.114/graphql/
+      - API_URI=http://saleor-mirror.default.svc.cluster.local/graphql/
     # commands:
     #   - echo ${API_URI}
     #   - echo ${APP_MOUNT_URI}
